repair works version mobile

--- a/src/styles/pages/Landing.scss
+++ b/src/styles/pages/Landing.scss
@@ -5,14 +5,14 @@
     flex-direction: column;
     background-color: rgb(0, 0, 0);
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     font-family:  'Victor Mono', monospace;
     @include tablet {
         display: flex;
         flex-direction: row;
         background-color: rgb(0, 0, 0);
         width: 100%;
-        height: 100%;
+        height: 100vh;
         font-family:  'Victor Mono', monospace; 
     }
 
